<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:weightSum="1"
    tools:context="com.example.xaid.smartfarm.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="vertical">



        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                app:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ultima_irrigacao" />

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/irrigar"
                        android:textSize="10dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                    />

                </RelativeLayout>




            </android.support.v7.widget.CardView>
        </LinearLayout>





    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        >

        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="10dp"
            card_view:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/umidade_do_solo"
                />
        </android.support.v7.widget.CardView>
    </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            >

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:elevation="10dp"
                card_view:cardCornerRadius="4dp">

                <TextView
                    android:id="@+id/info_text1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/fluxo_de_gua"
                    />
            </android.support.v7.widget.CardView>
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            >

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:elevation="10dp"
                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/info_text2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/volume_do_reservat_rio"
                        />

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:text="@string/encher"
                        android:textSize="10dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true" />
                    />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            >

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view4"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:elevation="10dp"

                card_view:cardCornerRadius="4dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/info_text4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/m_dulo_inteligente"
                        />

                    <Switch
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>


    </LinearLayout>




</RelativeLayout>
